Trwsio typo's a imports

--- a/test.html
+++ b/test.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Profi TTS</title>
-    <script src="../src/js/vocab.js" crossorigin="anonymous"></script>
+    <script src="tts.js"></script>
     <script>
       (function() {
-        synthesize("Hely byd");
+        synthesize("Helo byd");
       })();
     </script>
 </head>
